<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apnatutorials.androidcheckbox.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_checkbox_demo"
        android:textSize="16sp"
        android:textStyle="bold"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/myCheckBozWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chkCustomCricket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:button="@drawable/checkbox_selector"
            android:onClick="customCheckBoxClickHander"
            android:text="@string/cricket"
            android:textColor="@drawable/checkbox_color_selector" />

        <CheckBox
            android:id="@+id/chkCustomFootball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:button="@drawable/checkbox_selector"
            android:onClick="customCheckBoxClickHander"
            android:text="@string/football"
            android:textColor="@drawable/checkbox_color_selector" />

        <CheckBox
            android:id="@+id/chkCustomChess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:button="@drawable/checkbox_selector"
            android:onClick="customCheckBoxClickHander"
            android:text="@string/chess"
            android:textColor="@drawable/checkbox_color_selector"

            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:onClick="promptAllCheckedValues"
        android:text="@string/get_all_checked_values"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_checkbox_demo"
        android:textSize="16sp"
        android:textStyle="bold"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="5dp"
        android:background="#000" />

    <CheckBox
        android:id="@+id/chkDefaultCricket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cricket"

        />

    <CheckBox
        android:id="@+id/chkDefaultFootball"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/football"

        />

    <CheckBox
        android:id="@+id/chkDefaultChess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/chess"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:onClick="promptAllDefaultCheckedValues"
        android:text="@string/get_all_checked_values"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
